--- a/Cli/Cli.csproj
+++ b/Cli/Cli.csproj
@@ -7,11 +7,16 @@
         <PackAsTool>true</PackAsTool>
         <ToolCommandName>eaglerepair</ToolCommandName>
         <PackageOutputPath>./nupkg</PackageOutputPath>
+        <RootNamespace>Cli</RootNamespace>
         
     </PropertyGroup>
 
     <ItemGroup>
       <PackageReference Include="CommandLineParser" Version="2.8.0" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\Ast\Ast.csproj" />
     </ItemGroup>
 
 </Project>
