--- a/Cli/Cli.csproj
+++ b/Cli/Cli.csproj
@@ -12,6 +12,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <PackageReference Include="Autofac" Version="6.2.0" />
       <PackageReference Include="CommandLineParser" Version="2.8.0" />
     </ItemGroup>
 
