:open_file_folder: Move projects to subfolders

--- a/test/Tests/Tests.csproj
+++ b/test/Tests/Tests.csproj
@@ -21,7 +21,7 @@
     </ItemGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\Ast\Ast.csproj" />
+      <ProjectReference Include="..\..\src\Ast\Ast.csproj" />
     </ItemGroup>
 
 </Project>
