--- a/src/EagleRepair.Ast/EagleRepair.Ast.csproj
+++ b/src/EagleRepair.Ast/EagleRepair.Ast.csproj
@@ -2,7 +2,7 @@
 
     <PropertyGroup>
         <TargetFramework>net5.0</TargetFramework>
-        <RootNamespace>Ast</RootNamespace>
+        <RootNamespace>EagleRepair.Ast</RootNamespace>
     </PropertyGroup>
 
     <ItemGroup>
@@ -12,7 +12,7 @@
     </ItemGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\Monitor\Monitor.csproj" />
+      <ProjectReference Include="..\EagleRepair.Monitor\EagleRepair.Monitor.csproj" />
     </ItemGroup>
 
 </Project>
