:bowling: Add file system mock, refactor to fully end-to-end tests

--- a/test/EagleRepair.IntegrationTests/EagleRepair.IntegrationTests.csproj
+++ b/test/EagleRepair.IntegrationTests/EagleRepair.IntegrationTests.csproj
@@ -24,6 +24,7 @@
 
     <ItemGroup>
       <ProjectReference Include="..\..\src\EagleRepair.Ast\EagleRepair.Ast.csproj" />
+      <ProjectReference Include="..\..\src\EagleRepair.Cli\EagleRepair.Cli.csproj" />
     </ItemGroup>
 
 </Project>
