--- a/src/EagleRepair.Monitor/EagleRepair.Monitor.csproj
+++ b/src/EagleRepair.Monitor/EagleRepair.Monitor.csproj
@@ -1,8 +1,8 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <TargetFramework>net5.0</TargetFramework>
         <RootNamespace>EagleRepair.Monitor</RootNamespace>
+        <TargetFramework>netcoreapp3.1</TargetFramework>
     </PropertyGroup>
 
 </Project>
