--- a/test/EagleRepair.IntegrationTests/EagleRepair.IntegrationTests.csproj
+++ b/test/EagleRepair.IntegrationTests/EagleRepair.IntegrationTests.csproj
@@ -1,11 +1,12 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <TargetFramework>net5.0</TargetFramework>
 
         <IsPackable>false</IsPackable>
 
         <RootNamespace>EagleRepair.IntegrationTests</RootNamespace>
+
+        <TargetFramework>netcoreapp3.1</TargetFramework>
     </PropertyGroup>
 
     <ItemGroup>
