:unlock: Use .NET 5 instead of NET31

--- a/src/EagleRepair.Ast/EagleRepair.Ast.csproj
+++ b/src/EagleRepair.Ast/EagleRepair.Ast.csproj
@@ -2,7 +2,7 @@
 
     <PropertyGroup>
         <RootNamespace>EagleRepair.Ast</RootNamespace>
-        <TargetFramework>netcoreapp3.1</TargetFramework>
+        <TargetFramework>net5.0</TargetFramework>
     </PropertyGroup>
 
     <ItemGroup>
