--- a/src/EagleRepair.Cli/EagleRepair.Cli.csproj
+++ b/src/EagleRepair.Cli/EagleRepair.Cli.csproj
@@ -7,7 +7,7 @@
         <ToolCommandName>eaglerepair</ToolCommandName>
         <PackageOutputPath>./nupkg</PackageOutputPath>
         <RootNamespace>EagleRepair.Cli</RootNamespace>
-        <TargetFramework>netcoreapp3.1</TargetFramework>
+        <TargetFramework>net5.0</TargetFramework>
         
     </PropertyGroup>
 
