--- a/src/EagleRepair.Monitor/EagleRepair.Monitor.csproj
+++ b/src/EagleRepair.Monitor/EagleRepair.Monitor.csproj
@@ -2,7 +2,7 @@
 
     <PropertyGroup>
         <RootNamespace>EagleRepair.Monitor</RootNamespace>
-        <TargetFramework>netcoreapp3.1</TargetFramework>
+        <TargetFramework>net5.0</TargetFramework>
     </PropertyGroup>
 
 </Project>
