--- a/src/EagleRepair.Cli/EagleRepair.Cli.csproj
+++ b/src/EagleRepair.Cli/EagleRepair.Cli.csproj
@@ -6,8 +6,17 @@
         <PackAsTool>true</PackAsTool>
         <ToolCommandName>eaglerepair</ToolCommandName>
         <PackageOutputPath>./nupkg</PackageOutputPath>
+        <PackageLicenseExpression>MIT</PackageLicenseExpression>
+        <Title>EagleRepair</Title>
+        <Description>EagleRepair is a command line tool for automatically fixing static analysis warnigns.</Description>
         <RootNamespace>EagleRepair.Cli</RootNamespace>
         <TargetFramework>net5.0</TargetFramework>
+        <PackageVersion>0.0.1</PackageVersion>
+        <Authors>Martin Odermatt</Authors>
+        <Copyright>Copyright (c) 2021 Martin Odermatt</Copyright>
+        <PackageProjectUrl>https://github.com/marodev/EagleRepair</PackageProjectUrl>
+        <RepositoryUrl>https://github.com/marodev/EagleRepair</RepositoryUrl>
+        <PackageTags>sonarqube, resharper, static, analyzer, fix</PackageTags>
         
     </PropertyGroup>
 
@@ -18,10 +27,6 @@
 
     <ItemGroup>
       <ProjectReference Include="..\EagleRepair.Ast\EagleRepair.Ast.csproj" />
-    </ItemGroup>
-
-    <ItemGroup>
-      <Folder Include="nupkg" />
     </ItemGroup>
 
 </Project>
