--- a/src/EagleRepair.Cli/EagleRepair.Cli.csproj
+++ b/src/EagleRepair.Cli/EagleRepair.Cli.csproj
@@ -12,6 +12,7 @@
         <RootNamespace>EagleRepair.Cli</RootNamespace>
         <TargetFramework>net5.0</TargetFramework>
         <PackageVersion>0.0.1</PackageVersion>
+        <InformationalVersion>0.0.1</InformationalVersion>
         <Authors>Martin Odermatt</Authors>
         <Copyright>Copyright (c) 2021 Martin Odermatt</Copyright>
         <PackageProjectUrl>https://github.com/marodev/EagleRepair</PackageProjectUrl>
