--- a/src/EagleRepair.Cli/EagleRepair.Cli.csproj
+++ b/src/EagleRepair.Cli/EagleRepair.Cli.csproj
@@ -10,9 +10,9 @@
         <Title>EagleRepair</Title>
         <Description>EagleRepair is a command line tool for automatically fixing static analysis warnigns.</Description>
         <RootNamespace>EagleRepair.Cli</RootNamespace>
-        <TargetFramework>net5.0</TargetFramework>
-        <PackageVersion>0.0.5</PackageVersion>
-        <InformationalVersion>0.0.5</InformationalVersion>
+        <TargetFramework>net5.0</TargetFramework>s
+        <PackageVersion>0.0.6</PackageVersion>
+        <InformationalVersion>0.0.6</InformationalVersion>
         <Authors>Martin Odermatt</Authors>
         <Copyright>Copyright (c) 2021 Martin Odermatt</Copyright>
         <PackageProjectUrl>https://github.com/marodev/EagleRepair</PackageProjectUrl>
