:thumbsup: fix typo

--- a/src/EagleRepair.Cli/EagleRepair.Cli.csproj
+++ b/src/EagleRepair.Cli/EagleRepair.Cli.csproj
@@ -10,7 +10,7 @@
         <Title>EagleRepair</Title>
         <Description>EagleRepair is a command line tool for automatically fixing static analysis warnigns.</Description>
         <RootNamespace>EagleRepair.Cli</RootNamespace>
-        <TargetFramework>net5.0</TargetFramework>s
+        <TargetFramework>net5.0</TargetFramework>
         <PackageVersion>0.0.6</PackageVersion>
         <InformationalVersion>0.0.6</InformationalVersion>
         <Authors>Martin Odermatt</Authors>
