--- a/src/EagleRepair.Cli/EagleRepair.Cli.csproj
+++ b/src/EagleRepair.Cli/EagleRepair.Cli.csproj
@@ -11,8 +11,8 @@
         <Description>EagleRepair is a command line tool for automatically fixing static analysis warnigns.</Description>
         <RootNamespace>EagleRepair.Cli</RootNamespace>
         <TargetFramework>net5.0</TargetFramework>
-        <PackageVersion>0.0.6</PackageVersion>
-        <InformationalVersion>0.0.6</InformationalVersion>
+        <PackageVersion>0.0.7</PackageVersion>
+        <InformationalVersion>0.0.7</InformationalVersion>
         <Authors>Martin Odermatt</Authors>
         <Copyright>Copyright (c) 2021 Martin Odermatt</Copyright>
         <PackageProjectUrl>https://github.com/marodev/EagleRepair</PackageProjectUrl>
@@ -28,6 +28,10 @@
 
     <ItemGroup>
       <ProjectReference Include="..\EagleRepair.Ast\EagleRepair.Ast.csproj" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <Folder Include="nupkg" />
     </ItemGroup>
 
 </Project>
