--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,7 +1,7 @@
 site_name: EagleRepair
 copyright: Copyright &copy; 2021 Martin Odermatt
 repo_url: https://github.com/marodev/EagleRepair
-use_directory_urls: false
+site_url: https://marodev.github.io/EagleRepair/
 
 extra:
   social:
