:bug: remove slash

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,7 +1,7 @@
 site_name: EagleRepair
 copyright: Copyright &copy; 2021 Martin Odermatt
 repo_url: https://github.com/marodev/EagleRepair
-site_url: https://marodev.github.io/EagleRepair/
+site_url: https://marodev.github.io/EagleRepair
 
 
 extra:
