:sparkles: Add a few examples

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -7,6 +7,17 @@ extra:
   social:
     - icon: fontawesome/brands/github
       link: https://github.com/marodev/EagleRepair
+extra_javascript:
+  - https://cdnjs.cloudflare.com/ajax/libs/highlight.js/10.7.2/highlight.min.js
+  - javascripts/config.js
+extra_css:
+  - https://cdnjs.cloudflare.com/ajax/libs/highlight.js/10.7.2/styles/default.min.css
+    
+markdown_extensions:
+  - pymdownx.highlight
+  - pymdownx.superfences
+  - pymdownx.details
+
 theme:
   name: material
   features:
