--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -17,6 +17,7 @@ markdown_extensions:
   - pymdownx.highlight
   - pymdownx.superfences
   - pymdownx.details
+  - admonition
 
 theme:
   name: material
