:wrench: Move statistics to src folder

--- a/src/EagleRepair.Monitor/EagleRepair.Monitor.csproj
+++ b/src/EagleRepair.Monitor/EagleRepair.Monitor.csproj
@@ -6,7 +6,7 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\..\EagleRepair.Statistics\EagleRepair.Statistics.csproj" />
+      <ProjectReference Include="..\EagleRepair.Statistics\EagleRepair.Statistics.csproj" />
     </ItemGroup>
 
 </Project>
