--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,13 +10,18 @@ jobs:
   
   windows-build:
     runs-on: windows-latest
+    strategy:
+      matrix:
+        dotnet: [ '5.x', '6.x' ]
 
+    name: Run CI with dotnet ${{ matrix.dotnet }}
     steps:
       - uses: actions/checkout@v2
       - name: Setup .NET
         uses: actions/setup-dotnet@v1
         with:
-          dotnet-version: 5.0.x
+          dotnet-version: ${{ matrix.dotnet }}
+          include-prerelease: true
       - name: Restore dependencies
         run: dotnet restore
       - name: Build
