:sparkles: Include windows in CI pipeline

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,21 +9,21 @@ on:
 jobs:
   
 # FIXME: windows runner throws System.OutOfMemoryException : Insufficient memory to continue the execution of the program. 
-#  windows-build:
-#    runs-on: windows-latest
-#
-#    steps:
-#      - uses: actions/checkout@v2
-#      - name: Setup .NET
-#        uses: actions/setup-dotnet@v1
-#        with:
-#          dotnet-version: 5.x
-#      - name: Restore dependencies
-#        run: dotnet restore
-#      - name: Build
-#        run: dotnet build --no-restore
-#      - name: Test
-#        run: dotnet test --no-build --verbosity normal
+  windows-build:
+    runs-on: windows-latest
+
+    steps:
+      - uses: actions/checkout@v2
+      - name: Setup .NET
+        uses: actions/setup-dotnet@v1
+        with:
+          dotnet-version: 6.x
+      - name: Restore dependencies
+        run: dotnet restore
+      - name: Build
+        run: dotnet build --no-restore
+      - name: Test
+        run: dotnet test --no-build --verbosity normal
     
   ubuntu-build:
     runs-on: ubuntu-latest
