--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,12 +1,13 @@
 site_name: EagleRepair
-copyright: Copyright &copy; 2021 Martin Odermatt
+copyright: Copyright &copy; 2022 Martin Odermatt, Diego Marcilio, Carlo A. Furia
 repo_url: https://github.com/marodev/EagleRepair
 site_url: https://marodev.github.io/EagleRepair
 extra:
-  version: 0.0.30
   social:
     - icon: fontawesome/brands/github
       link: https://github.com/marodev/EagleRepair
+    - icon: fontawesome/brands/linkedin
+      link: https://linkedin.com/in/marodev
 extra_javascript:
   - https://cdnjs.cloudflare.com/ajax/libs/highlight.js/10.7.2/highlight.min.js
   - javascripts/config.js
@@ -17,6 +18,7 @@ markdown_extensions:
   - pymdownx.highlight
   - pymdownx.superfences
   - admonition
+  - pymdownx.details
 
 theme:
   name: material
